<resources>
    <string name="app_name">超级矿资源</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="titleText1">title here</string>
    <string name="mine">厂矿</string>
    <string name="truck">货车</string>
    <string name="order">货单</string>
    <string name="me">我</string>
    <string name="title_activity_main">超级矿资源</string>
    <string name="title_welcome">超级矿资源 0.7</string>
    <string name="slogan_welcome">连接厂矿与货车</string>
    <string name="login_user_hint">用户名/手机号</string>
    <string name="login_pw_hint">密码</string>
    <string name="login_back">返回</string>
    <string name="login_btn_forget">忘记密码？</string>
    <string name="current_role_driver">司机版 ></string>
    <string name="current_role_owner">货主版 ></string>
</resources>
