<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eee"
    android:gravity="center_horizontal"
    >

    <RelativeLayout
        android:id="@+id/login_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar"
        >

        <Button
            android:id="@+id/login_reback_btn"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/login_back"
            android:textSize="30sp"
            android:textColor="#fff"
            android:onClick="login_back"
            android:background="@drawable/title_btn_back"
        />

        <Button
            android:id="@+id/login_OK"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="ASD"
            android:textSize="35sp"
            android:textColor="#81f"
            android:onClick="login_back"
            android:background="@drawable/title_btn_back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="登录"
            />
    </RelativeLayout>

    <EditText
        android:id="@+id/login_user_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_top_layout"
        android:textColor="#000"
        android:textSize="15sp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:singleLine="true"
        android:hint="@string/login_user_hint"
        android:background="@drawable/login_editbox"
        />

    <EditText
        android:id="@+id/login_pw_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_user_edit"
        android:textColor="#000"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:singleLine="true"
        android:password="true"
        android:hint="@string/login_pw_hint"
        android:background="@drawable/login_editbox"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/login_pw_edit"
        >

        <Button
            android:id="@+id/forget_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="5dp"
            android:text="@string/login_btn_forget"
            android:textSize="16sp"
            android:textColor="@color/cyan"
            android:background="#0000"
            android:onClick="login_pw"
            />

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:text="登录"
            android:background="@color/cyan"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:onClick="login_main"
            />

    </RelativeLayout>

</RelativeLayout>